# Chip-8_Emulator

./: buildweb.sh
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  style.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
